IE Fixes, Back to top button z-index fix

--- a/waters-aem-frontend/src/styles/externalfooter.scss
+++ b/waters-aem-frontend/src/styles/externalfooter.scss
@@ -24,6 +24,7 @@
     }
 
     img {
+        height: 32px;
         max-width: 115px;
     }
 
@@ -90,7 +91,7 @@
     position: fixed;
     bottom: 10px;
     right: 20px;
-    z-index: 9999;
+    z-index: 99;
     height: 2.75em;
     width: 2.75em;
     text-align: center;
