--- a/waters-aem-frontend/src/styles/externalheader.scss
+++ b/waters-aem-frontend/src/styles/externalheader.scss
@@ -3,18 +3,22 @@
     background-color: $color-white;
     position: fixed;
     width: 100%;
-    z-index: 99;
+    z-index: 100;
     top: 0;
 
     &__logo {
         padding: $space-s 0 ($space-s - 0.1em);
         width: 115px;
         float: left;
+
+        img {
+            height: 32px;
+        }
     }
 
     &__links {
         float: right;
-        padding: $space-s 0 ($space-s - 0.1em);
+        padding: ($space-s - 0.3em) 0 ($space-s - 0.1em);
 
         ul {
             list-style: none;
@@ -60,6 +64,7 @@
                 display: inline-block;
                 float: left;
                 width: 30px;
+                height: 25px;
                 padding-left: 0.3em;
 
                 .st0 {
